<resources>
    <string name="app_name">VoiceSNS</string>
    <string name="logo_desc">Echo Diary</string>


    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>

    <string name="Social_login_1">Start with KaKao</string>
    <string name="Social_login_2">Start with Google</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>


    <string name="set_alarm_info">매일 특정 시간에 알람을 받고\n에코 다이어리를 작성해보세요</string>
    <string name="select_time_prompt">시간을 지정해주세요</string>
    <string name="skip_alarm">전화 알람을 안 받을래요!</string>
    <string name="skip_alarm_no">전화 알람을 받고싶어요!</string>
    <string name="skip_alarm_txt">알람을 끄시면 하루의 소중한 감정을 놓칠 수 있어요.\n그래도 알람을 끄시겠어요?</string>
    <string name="Finish">Finish</string>


    <string name="Next">Next</string>
    <string name="Id">아이디</string>
    <string name="SetNickname">사용하실 아이디를 입력하세요</string>

    <!-- 녹음 페이지 -->
    <string name="record_public">전체공개</string>
    <string name="record_private">나만보기</string>
    <string name="new_record">새로운 녹음을 진행해보세요</string>
    <string name="recording">Recording...</string>
    <string name="recording_txt">최대 1분 30초까지 녹음이 가능합니다</string>
    <string name="record_post">Post</string>

    <string name="google_login_client_id">202579304906-34ikghrpbc439jtsk7h5blka1qas88md.apps.googleusercontent.com</string>


</resources>