<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/main"
    tools:context=".register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <!-- logo -->
        <include layout="@layout/top_logo"/>

        <!-- 시간 선택 -->
        <LinearLayout
            android:id="@+id/time_picker_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/skip_alarm_txt"
            android:layout_below="@+id/logo_container"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/set_alarm_info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_alarm_info"
                android:textColor="@color/mint1"
                android:layout_marginBottom="8dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- 시간 선택 뷰 (TimePicker) -->
            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/select_time_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/select_time_prompt"
                android:textColor="@color/gray"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/skip_alarm_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/finish_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/skip_alarm"
            android:textColor="@color/mint1"
            android:textSize="14sp" />

        <!-- Finish 버튼 -->
        <android.widget.Button
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/register_button"
            android:text="@string/Finish"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
