<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <!-- logo -->
    <include layout="@layout/top_logo"/>

    <!-- Register text-->
    <TextView
        android:id="@+id/setNickNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/SetNickname"
        android:textColor="#238474"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_container" />

    <!-- 아이디 입력 창 -->
    <LinearLayout
        android:id="@+id/register_id_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_container"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setNickNameTextView">

        <EditText
            android:id="@+id/editTextId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/Id" />

        <android.widget.Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="76dp"
            android:layout_weight="1"
            android:background="@drawable/register_button"
            android:text="@string/Next"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_input_container" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>