<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".record.RecordActivity">

    <LinearLayout
        android:id="@+id/disclosure_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/disclosure_bg_outline"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/record_toggle_public"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/disclosure_select"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/record_public"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xxs"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/record_toggle_private"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/record_private"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_xxs"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <!-- 첫 번째 record_block -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record1_block"
        android:layout_width="@dimen/record_block_width"
        android:layout_height="@dimen/record_block_height"
        android:background="@drawable/record_empty_block"
        android:layout_marginTop="20dp"
        android:onClick="onRecordBlockClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disclosure_toggle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/record1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_plus" />

            <TextView
                android:id="@+id/record1_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_record"
                android:textColor="@color/mint1"
                android:textSize="@dimen/text_size_xs" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 두 번째 record_block -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record2_block"
        android:layout_width="@dimen/record_block_width"
        android:layout_height="@dimen/record_block_height"
        android:background="@drawable/record_empty_block"
        android:layout_marginTop="20dp"
        android:onClick="onRecordBlockClick"
        app:layout_constraintTop_toBottomOf="@id/record1_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/record2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_plus" />

            <TextView
                android:id="@+id/record2_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_record"
                android:textSize="@dimen/text_size_xs"
                android:textColor="@color/mint1" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 세 번째 record_block -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record3_block"
        android:layout_width="@dimen/record_block_width"
        android:layout_height="@dimen/record_block_height"
        android:background="@drawable/record_empty_block"
        android:layout_marginTop="20dp"
        android:onClick="onRecordBlockClick"
        app:layout_constraintTop_toBottomOf="@id/record2_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/record3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_plus" />

            <TextView
                android:id="@+id/record3_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_record"
                android:textSize="@dimen/text_size_xs"
                android:textColor="@color/mint1" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 하단바 -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_nav_height"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
